fixed clipping thing

--- a/public/cmr.css
+++ b/public/cmr.css
@@ -239,19 +239,26 @@ main {
 
 #views {
    position: fixed;
-   width: 100vmin;
+   max-width: 900px;
+   width: 100%;
    height: 100vmin;
    overflow-x: hidden;
    overflow-y: auto;
 }
 
 #views > * {
-   width: 100vw;
+   max-width: 900px;
+   width: 100%;
    bottom: 0;
    top: 2vmin;
    position: fixed;
    margin-left: .5vmin;
    overflow-y: auto;
+}
+
+#playerui {
+   width: 100%;
+   height: 90%;
 }
 
 #views > .hide-left {
